# rcan-py

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md  mypy.ini  pyproject.toml
.github/actions/validate-rcan/: action.yml
.github/workflows/: ci.yml  forbidden-phrase-lint.yml  publish.yml  spec-smoke.yml
docs/: ci-integration.md
rcan/: __init__.py  address.py  audit.py  audit_bundle.py  clock.py  competition.py  compliance.py  config_update.py  consent.py  contribute.py  crypto.py  delegation.py  encoding.py  envelope.py  exceptions.py  fault.py  federation.py  firmware.py  gates.py  hybrid.py  identity.py  keys.py  m2m.py  manifest.py  mcp.py  message.py  multimodal.py  node.py  offline.py  qos.py  registry.py  replay.py  revocation.py  safety.py  sbom.py  signing.py  training_consent.py  transport.py  types.py  validate.py  (+2 more)
tests/: test_address.py  test_api_surface_3_1.py  test_audit.py  test_audit_bundle.py  test_canonical_types.py  test_clock.py  test_competition.py  test_compliance.py  test_consent_wire.py  test_contribute.py  test_crypto.py  test_delegation.py  test_encoding.py  test_exceptions.py  test_federation.py  test_gates.py  test_hybrid.py  test_identity.py  test_manifest.py  test_message.py  test_multimodal.py  test_node.py  test_offline.py  test_pq_signing.py  test_qos.py  test_registry.py  test_replay.py  test_revocation.py  test_safety_messages.py  test_signing.py  test_strict_mode.py  test_training_consent.py  test_transport.py  test_transport_integration.py  test_types.py  test_v22_envelope.py  test_validate.py  test_validate_node.py  test_validate_robot.py  test_version.py  (+2 more)
tests/fixtures/: sample.rcan.yaml
(+2 files in other folders)
