[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcan"
version = "3.3.0"
description = "Official Python SDK for the RCAN robot communication protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Craig Merry", email = "cmmerry@ucdavis.edu"}]
keywords = ["robotics", "rcan", "protocol", "ai-safety", "embodied-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.27"]
crypto = ["cryptography>=42.0"]
pq = ["dilithium-py>=1.0"]
# from_manifest — read ROBOT.md frontmatter and return RCAN identity fields
manifest = ["pyyaml>=6.0"]
all = ["httpx>=0.27", "cryptography>=42.0", "dilithium-py>=1.0", "pyyaml>=6.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "cryptography>=42.0", "dilithium-py>=1.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://rcan.dev"
Repository = "https://github.com/continuonai/rcan-py"
Documentation = "https://rcan.dev/docs"
Specification = "https://rcan.dev/spec"

[project.scripts]
rcan-validate = "rcan.validate:main"

[tool.hatch.build.targets.wheel]
packages = ["rcan"]
include = ["rcan/py.typed"]
